programs/out_program_10.txt
program_10.c:8:1: error: If main has parameters, the type of the second parameter must be equivalent to char**.

    Undefined behavior (UB-FD7):
        see C11 section 5.1.2.2.1:1 http://rvdoc.org/C11/5.1.2.2.1
        see C11 section J.2:1 item 4 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

program_10.c:29:1: error: Incompatible pointer types in initializer or function call arguments.

    Constraint violation (CV-TSE2):
        see C11 section 6.7.9:11 http://rvdoc.org/C11/6.7.9
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

program_10.c:30:1: error: Incompatible pointer types in initializer or function call arguments.

    Constraint violation (CV-TSE2):
        see C11 section 6.7.9:11 http://rvdoc.org/C11/6.7.9
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

program_10.c:31:1: error: Incompatible pointer types in initializer or function call arguments.

    Constraint violation (CV-TSE2):
        see C11 section 6.7.9:11 http://rvdoc.org/C11/6.7.9
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

program_10.c: In function 'main':
program_10.c:29:21: warning: passing argument 1 of 'deallocate_2d_array' from incompatible pointer type [-Wincompatible-pointer-types]
 deallocate_2d_array(A, 1024, 1024);
                     ^
In file included from program_10.c:4:0:
./init_dyn_array.h:25:6: note: expected 'int **' but argument is of type 'float **'
 void deallocate_2d_array(int **a, int l, int m); //TODO: change signature! we don't need last dimension
      ^
program_10.c:30:21: warning: passing argument 1 of 'deallocate_2d_array' from incompatible pointer type [-Wincompatible-pointer-types]
 deallocate_2d_array(B, 1024, 1024);
                     ^
In file included from program_10.c:4:0:
./init_dyn_array.h:25:6: note: expected 'int **' but argument is of type 'float **'
 void deallocate_2d_array(int **a, int l, int m); //TODO: change signature! we don't need last dimension
      ^
program_10.c:31:21: warning: passing argument 1 of 'deallocate_2d_array' from incompatible pointer type [-Wincompatible-pointer-types]
 deallocate_2d_array(C, 1024, 1024);
                     ^
In file included from program_10.c:4:0:
./init_dyn_array.h:25:6: note: expected 'int **' but argument is of type 'float **'
 void deallocate_2d_array(int **a, int l, int m); //TODO: change signature! we don't need last dimension
      ^
